--- a/mubei/wallet/wallet.html
+++ b/mubei/wallet/wallet.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="../css/mui.min.css" rel="stylesheet" />
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../css/mui.min.css" rel="stylesheet"/>
     <style>
         .word2 {
             background-color: white;
@@ -24,7 +25,8 @@
         .money p {
             color: #000000;
         }
-        .border_right{
+
+        .border_right {
             border-right: 1px solid gainsboro;
         }
     </style>
