--- a/mubei/TurnOut/change_recode_zichan.html
+++ b/mubei/TurnOut/change_recode_zichan.html
@@ -1,83 +1,90 @@
 <!doctype html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<script type="text/javascript" src="../js/back_icon.js" ></script>
-		<style>
-			.h-ul {
-				height: 40px;
-				background-color: #ffffff;
-				margin-top: 0px;
-			}
-			 ul {
-				-webkit-padding-start:0px;
-				    -webkit-margin-after: 0em;
-			}
-			.h-ul li {
-				padding-top: 10px;
-				list-style: none;
-				float: left;
-				width: 33%;
-				text-align: center;
-				 font-size: 15px;
-				 font-weight:inherit;
-			}
-			.table {
-				margin-top: 8px;
-                background-color: #FFFFFF;
-                font-size: 14px;
-                color: #000000;
-                text-align: center;
-            }
-              .table td,
-            .table th {
-                border-bottom: 1px solid #d8d8d8;
-                padding: 0 1em 0;
-                width: 33%;
-            }
-             .table tr{
-             	height:40px;
-             }
-             .jine{
-             	color: red;
-             }
-		</style>
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../css/mui.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../js/back_icon.js"></script>
+    <style>
+        .h-ul {
+            height: 40px;
+            background-color: #ffffff;
+            margin-top: 0px;
+        }
 
-	<body>
-		<header class="mui-bar mui-bar-nav" style="background-color: #fec900;">
-			<i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="back_go()"></i>
-			<h1 class="mui-title">兑换记录</h1>
-		</header>
-		<div class="mui-content">
-			<table class="table" width="100%">
-            	<tbody>
-            		<tr>
-            			<th>余额</th>
-            			<th>兑换资产</th>
-            			<th>兑换时间</th>
-            		</tr>
-            		<tr>
-            			<td>00.00</td>
-            			<td>123</td>
-            			<td>2018.03.15 10:00:00</td>
-            		</tr>
-            		<tr>
-            			<td>00.00</td>
-            			<td>123</td>
-            			<td>2018.03.15 10:00:00</td>
-            		</tr>
-            	</tbody>
-            </table>
-		</div>
-		<script src="../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
-		</script>
-	</body>
+        ul {
+            -webkit-padding-start: 0px;
+            -webkit-margin-after: 0em;
+        }
+
+        .h-ul li {
+            padding-top: 10px;
+            list-style: none;
+            float: left;
+            width: 33%;
+            text-align: center;
+            font-size: 15px;
+            font-weight: inherit;
+        }
+
+        .table {
+            margin-top: 8px;
+            background-color: #FFFFFF;
+            font-size: 14px;
+            color: #000000;
+            text-align: center;
+        }
+
+        .table td,
+        .table th {
+            border-bottom: 1px solid #d8d8d8;
+            padding: 0 1em 0;
+            width: 33%;
+        }
+
+        .table tr {
+            height: 40px;
+        }
+
+        .jine {
+            color: red;
+        }
+    </style>
+</head>
+
+<body>
+<header class="mui-bar mui-bar-nav" style="background-color: #fec900;">
+    <i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="back_go()"></i>
+    <h1 class="mui-title">兑换记录</h1>
+</header>
+<div class="mui-content">
+    <table class="table" width="100%">
+        <tbody>
+        <tr>
+            <th>余额</th>
+            <th>兑换资产</th>
+            <th>兑换时间</th>
+        </tr>
+        <tr>
+            <td>00.00</td>
+            <td>123</td>
+            <td>2018.03.15 10:00:00</td>
+        </tr>
+        <tr>
+            <td>00.00</td>
+            <td>123</td>
+            <td>2018.03.15 10:00:00</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<script src="../js/mui.min.js"></script>
+<script type="text/javascript">
+    mui.init()
+</script>
+</body>
 
 </html>
