--- a/mubei/TurnOut/lt_change_recode_zc.html
+++ b/mubei/TurnOut/lt_change_recode_zc.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="../css/mui.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="../js/back_icon.js" ></script>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../css/mui.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../js/back_icon.js"></script>
     <style>
         .h-ul {
             height: 40px;
             background-color: #ffffff;
             margin-top: 0px;
         }
+
         ul {
-            -webkit-padding-start:0px;
+            -webkit-padding-start: 0px;
             -webkit-margin-after: 0em;
         }
+
         .h-ul li {
             padding-top: 10px;
             list-style: none;
@@ -24,8 +27,9 @@
             width: 33%;
             text-align: center;
             font-size: 15px;
-            font-weight:inherit;
+            font-weight: inherit;
         }
+
         .table {
             margin-top: 8px;
             background-color: #FFFFFF;
@@ -33,18 +37,22 @@
             color: #000000;
             text-align: center;
         }
+
         .table td,
         .table th {
             border-bottom: 1px solid #d8d8d8;
             padding: 0 1em 0;
             width: 33%;
         }
-        .table tr{
-            height:40px;
+
+        .table tr {
+            height: 40px;
         }
-        .jine{
+
+        .jine {
             color: red;
         }
+
         .mui-segmented-control {
             border: 1px solid #fec900;
         }
@@ -122,106 +130,105 @@
 
 
 </div>
-<script type="text/javascript" src="../js/jquery.min.js" ></script>
-<script type="text/javascript" src="../js/common.js" ></script>
-<script type="text/javascript" src="../js/url.js" ></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src="../js/url.js"></script>
 <script src="../js/mui.min.js"></script>
 <script type="text/javascript">
     mui.init();
     $.ajax({
-        url: j_url+"/turnout/change_recode_balance",
+        url: j_url + "/turnout/change_recode_balance",
         type: 'POST',
         dataType: 'jsonp',
         data: {
-            u_id:localStorage.lastname
+            u_id: localStorage.lastname
         },
         crossDomain: true,
-        success: function(res) {
+        success: function (res) {
             console.log(res);
-            if(res.code == 2) {
+            if (res.code == 2) {
                 $("#none1").show();
                 $("#table1").hide();
-            } else if(res.code == 1) {
+            } else if (res.code == 1) {
                 $("#none1").hide();
                 $("#table1").show();
                 var rou = res.data;
                 $('.tbody').empty();
-                for(var key in rou) {
+                for (var key in rou) {
 
                     $('.tbody').append("<tr style='height: 35px;'><td>" + rou[key].assets + "</td> <td>" + rou[key].bo_money + "</td>" +
-                    "<td>"+ rou[key].bo_time +  "</td> </tr>");
+                        "<td>" + rou[key].bo_time + "</td> </tr>");
                 }
             }
         },
-        fail: function(res) {
+        fail: function (res) {
 
         }
     });
-    document.getElementById("yue").addEventListener('tap', function() {
+    document.getElementById("yue").addEventListener('tap', function () {
         $.ajax({
-            url: j_url+"/turnout/change_recode_balance",
+            url: j_url + "/turnout/change_recode_balance",
             type: 'POST',
             dataType: 'jsonp',
             data: {
-                u_id:localStorage.lastname
+                u_id: localStorage.lastname
             },
             crossDomain: true,
-            success: function(res) {
+            success: function (res) {
                 console.log(res);
-                if(res.code == 2) {
+                if (res.code == 2) {
                     $("#none1").show();
                     $("#table1").hide();
-                } else if(res.code == 1) {
+                } else if (res.code == 1) {
                     $("#none1").hide();
                     $("#table1").show();
                     var rou = res.data;
                     $('.tbody').empty();
-                    for(var key in rou) {
+                    for (var key in rou) {
 
                         $('.tbody').append("<tr style='height: 35px;'><td>" + rou[key].assets + "</td> <td>" + rou[key].bo_money + "</td>" +
-                        "<td>"+ rou[key].bo_time +  "</td> </tr>");
+                            "<td>" + rou[key].bo_time + "</td> </tr>");
                     }
                 }
             },
-            fail: function(res) {
+            fail: function (res) {
 
             }
         });
     });
 
-    document.getElementById("liutong").addEventListener('tap', function() {
+    document.getElementById("liutong").addEventListener('tap', function () {
         $.ajax({
-            url: j_url+"/turnout/change_current_zichan",
+            url: j_url + "/turnout/change_current_zichan",
             type: 'POST',
             dataType: 'jsonp',
             data: {
-                u_id:localStorage.lastname,
-                user_phone:$("#tel").val()
+                u_id: localStorage.lastname,
+                user_phone: $("#tel").val()
             },
             crossDomain: true,
-            success: function(res) {
+            success: function (res) {
                 console.log(res);
-                if(res.code == 2) {
+                if (res.code == 2) {
                     $("#none2").show();
                     $("#table2").hide();
-                } else if(res.code == 1) {
+                } else if (res.code == 1) {
                     $("#none2").hide();
                     $("#table2").show();
                     var rou = res.data;
                     $('.tbody2').empty();
-                    for(var key in rou) {
+                    for (var key in rou) {
                         $('.tbody2').append("<tr style='height: 35px;'><td>" + rou[key].assets + "</td> <td>" + rou[key].co_money + "</td>" +
-                        "<td>"+ rou[key].co_time +  "</td> </tr>");
+                            "<td>" + rou[key].co_time + "</td> </tr>");
 
                     }
                 }
             },
-            fail: function(res) {
+            fail: function (res) {
 
             }
         });
     });
-
 
 
 </script>
