--- a/mubei/shuzi/transaction/transaction_record.html
+++ b/mubei/shuzi/transaction/transaction_record.html
@@ -1,88 +1,95 @@
 <!doctype html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<style>
-			.mui-plus .plus{
-				display: inline;
-			}
-			
-			.plus{
-				display: none;
-			}
-			
-			#topPopover {
-				position: fixed;
-				top: 16px;
-				right: 6px;
-			}
-			#topPopover .mui-popover-arrow {
-				left: auto;
-				right: 6px;
-			}
-			p {
-				text-indent: 22px;
-			}
-			span.mui-icon {
-				font-size: 12px;
-				color: #007aff;
-				margin-left: -15px;
-				padding-right: 10px;
-			}
-			.mui-popover {
-				width: 120px;
-				height: 230px;
-				background-color: white;
-			}
-			.mui-content {
-				padding: 10px;
-			}
-		</style>
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../../css/mui.min.css" rel="stylesheet"/>
+    <style>
+        .mui-plus .plus {
+            display: inline;
+        }
 
-	<body>
-		
-		<header class="mui-bar mui-bar-nav" style="background-color: #46adfc;color: white;">
-			<i class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" onclick="back()"></i>
-			<h1 class="mui-title" style="color: white;">交易记录</h1>
-			<a id="menu" class="mui-action-menu mui-icon mui-icon-bars mui-pull-right" style="color: white;" href="#topPopover"></a>
-		</header>
-		<div class="mui-content">
-			<p style="font-size: 16px; margin: auto;width: 150px;margin-top: 20px;">没有找到相关记录</p>
-		</div>
-		 <!--右上角弹出菜单-->
-            <div id="topPopover" class="mui-popover">
-			<div class="mui-popover-arrow"></div>
-			<div class="mui-scroll-wrapper">
-				<div class="mui-scroll">
-					<ul class="mui-table-view">
-						<li class="mui-table-view-cell">
-							<a href="unfilled_orders.html">HPAY</a>
-						</li>
-						<li class="mui-table-view-cell"><a href="#">比特币</a>
-						</li>
-						<li class="mui-table-view-cell"><a href="#">莱特币</a>
-						</li>
-						<li class="mui-table-view-cell"><a href="#">以太坊</a>
-						</li>
-						<li class="mui-table-view-cell"><a href="#">狗狗币</a>
-						</li>
-						
-					</ul>
-				</div>
-			</div>
-		</div>
-		
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
-			
-					
-			mui.plusReady(function () {
+        .plus {
+            display: none;
+        }
+
+        #topPopover {
+            position: fixed;
+            top: 16px;
+            right: 6px;
+        }
+
+        #topPopover .mui-popover-arrow {
+            left: auto;
+            right: 6px;
+        }
+
+        p {
+            text-indent: 22px;
+        }
+
+        span.mui-icon {
+            font-size: 12px;
+            color: #007aff;
+            margin-left: -15px;
+            padding-right: 10px;
+        }
+
+        .mui-popover {
+            width: 120px;
+            height: 230px;
+            background-color: white;
+        }
+
+        .mui-content {
+            padding: 10px;
+        }
+    </style>
+</head>
+
+<body>
+
+<header class="mui-bar mui-bar-nav" style="background-color: #46adfc;color: white;">
+    <i class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" onclick="back()"></i>
+    <h1 class="mui-title" style="color: white;">交易记录</h1>
+    <a id="menu" class="mui-action-menu mui-icon mui-icon-bars mui-pull-right" style="color: white;"
+       href="#topPopover"></a>
+</header>
+<div class="mui-content">
+    <p style="font-size: 16px; margin: auto;width: 150px;margin-top: 20px;">没有找到相关记录</p>
+</div>
+<!--右上角弹出菜单-->
+<div id="topPopover" class="mui-popover">
+    <div class="mui-popover-arrow"></div>
+    <div class="mui-scroll-wrapper">
+        <div class="mui-scroll">
+            <ul class="mui-table-view">
+                <li class="mui-table-view-cell">
+                    <a href="unfilled_orders.html">HPAY</a>
+                </li>
+                <li class="mui-table-view-cell"><a href="#">比特币</a>
+                </li>
+                <li class="mui-table-view-cell"><a href="#">莱特币</a>
+                </li>
+                <li class="mui-table-view-cell"><a href="#">以太坊</a>
+                </li>
+                <li class="mui-table-view-cell"><a href="#">狗狗币</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</div>
+
+<script src="../../js/mui.min.js"></script>
+<script type="text/javascript">
+    mui.init()
+
+
+    mui.plusReady(function () {
 //				var view = plus.nativeObj.View.getViewById("title");
 //				
 //				var bitmap = new plus.nativeObj.Bitmap("back");
@@ -95,16 +102,16 @@
 //				});
 //				
 //				view.setTouchEventRect({top:"0px",left:"0px",width:"44px",height:"100%"});
-			});
-			
-			mui('.mui-scroll-wrapper').scroll();
-			mui('body').on('shown', '.mui-popover', function(e) {
-				//console.log('shown', e.detail.id);//detail为当前popover元素
-			});
-			mui('body').on('hidden', '.mui-popover', function(e) {
-				//console.log('hidden', e.detail.id);//detail为当前popover元素
-			});
-		</script>
-	</body>
+    });
+
+    mui('.mui-scroll-wrapper').scroll();
+    mui('body').on('shown', '.mui-popover', function (e) {
+        //console.log('shown', e.detail.id);//detail为当前popover元素
+    });
+    mui('body').on('hidden', '.mui-popover', function (e) {
+        //console.log('hidden', e.detail.id);//detail为当前popover元素
+    });
+</script>
+</body>
 
 </html>
