--- a/mubei/shuzi/zhongchou/zc_recode.html
+++ b/mubei/shuzi/zhongchou/zc_recode.html
@@ -1,114 +1,119 @@
 <!doctype html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<style>
-			.mui-segmented-control {
-				border: 1px solid #dd524d;
-			}
-			
-			.mui-segmented-control .mui-control-item.mui-active {
-				color: #fff;
-				background-color: #dd524d;
-			}
-			
-			.mui-segmented-control .mui-control-item {
-				color: #dd524d;
-				border-color: inherit;
-			}
-			
-			.mui-plus .plus{
-				display: inline;
-			}
-			
-			.plus{
-				display: none;
-			}
-			
-			#topPopover {
-				position: fixed;
-				top: 16px;
-				right: 6px;
-			}
-			#topPopover .mui-popover-arrow {
-				left: auto;
-				right: 6px;
-			}
-			p {
-				text-indent: 22px;
-			}
-			span.mui-icon {
-				font-size: 12px;
-				color: #007aff;
-				margin-left: -15px;
-				padding-right: 10px;
-			}
-			.mui-popover {
-				width: 120px;
-				height: 230px;
-				background-color: white;
-			}
-			.mui-content {
-				padding: 10px;
-			}
-		</style>
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../../css/mui.min.css" rel="stylesheet"/>
+    <style>
+        .mui-segmented-control {
+            border: 1px solid #dd524d;
+        }
 
-	<body>
-		<header class="mui-bar mui-bar-nav" style="background-color: #46adfc;color: white;">
-			<i class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" onclick="back()"></i>
-			<h1 class="mui-title" style="color: white;">众筹消费记录</h1>
-		</header>
+        .mui-segmented-control .mui-control-item.mui-active {
+            color: #fff;
+            background-color: #dd524d;
+        }
 
-		<div class="mui-content">
-			<div style="padding: 20px 20px;">
-				<div id="segmentedControl" class="mui-segmented-control">
-					<a class="mui-control-item mui-active" href="#item1">购买记录</a>
-					<a class="mui-control-item" href="#item2">释放记录</a>
-				</div>
-			</div>
-			<div id="item1" class="mui-control-content mui-active">
-				<p style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px;">没有找到相关记录</p>
-				<!--<ul class="mui-table-view">
-						<li class="mui-table-view-cell">
-							第二个选项卡子项-2
-						</li>
-						<li class="mui-table-view-cell">
-							第二个选项卡子项-2
-						</li>
-						<li class="mui-table-view-cell">
-							第二个选项卡子项-3
-						</li>
-					</ul>-->
-			</div>
-			<div id="item2" class="mui-control-content">
-				<p style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px;">没有找到相关记录2</p>
-				<!--<ul class="mui-table-view">
-						<li class="mui-table-view-cell">
-							第二个选项卡子项-1
-						</li>
-						<li class="mui-table-view-cell">
-							第二个选项卡子项-2
-						</li>
-						<li class="mui-table-view-cell">
-							第二个选项卡子项-3
-						</li>
-					</ul>-->
-			</div>
-		</div>
-   
-        
+        .mui-segmented-control .mui-control-item {
+            color: #dd524d;
+            border-color: inherit;
+        }
 
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
-			
-				
-			mui.plusReady(function () {
+        .mui-plus .plus {
+            display: inline;
+        }
+
+        .plus {
+            display: none;
+        }
+
+        #topPopover {
+            position: fixed;
+            top: 16px;
+            right: 6px;
+        }
+
+        #topPopover .mui-popover-arrow {
+            left: auto;
+            right: 6px;
+        }
+
+        p {
+            text-indent: 22px;
+        }
+
+        span.mui-icon {
+            font-size: 12px;
+            color: #007aff;
+            margin-left: -15px;
+            padding-right: 10px;
+        }
+
+        .mui-popover {
+            width: 120px;
+            height: 230px;
+            background-color: white;
+        }
+
+        .mui-content {
+            padding: 10px;
+        }
+    </style>
+</head>
+
+<body>
+<header class="mui-bar mui-bar-nav" style="background-color: #46adfc;color: white;">
+    <i class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" onclick="back()"></i>
+    <h1 class="mui-title" style="color: white;">众筹消费记录</h1>
+</header>
+
+<div class="mui-content">
+    <div style="padding: 20px 20px;">
+        <div id="segmentedControl" class="mui-segmented-control">
+            <a class="mui-control-item mui-active" href="#item1">购买记录</a>
+            <a class="mui-control-item" href="#item2">释放记录</a>
+        </div>
+    </div>
+    <div id="item1" class="mui-control-content mui-active">
+        <p style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px;">没有找到相关记录</p>
+        <!--<ul class="mui-table-view">
+                <li class="mui-table-view-cell">
+                    第二个选项卡子项-2
+                </li>
+                <li class="mui-table-view-cell">
+                    第二个选项卡子项-2
+                </li>
+                <li class="mui-table-view-cell">
+                    第二个选项卡子项-3
+                </li>
+            </ul>-->
+    </div>
+    <div id="item2" class="mui-control-content">
+        <p style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px;">没有找到相关记录2</p>
+        <!--<ul class="mui-table-view">
+                <li class="mui-table-view-cell">
+                    第二个选项卡子项-1
+                </li>
+                <li class="mui-table-view-cell">
+                    第二个选项卡子项-2
+                </li>
+                <li class="mui-table-view-cell">
+                    第二个选项卡子项-3
+                </li>
+            </ul>-->
+    </div>
+</div>
+
+
+<script src="../../js/mui.min.js"></script>
+<script type="text/javascript">
+    mui.init()
+
+
+    mui.plusReady(function () {
 //				var view = plus.nativeObj.View.getViewById("title");
 //				
 //				var bitmap = new plus.nativeObj.Bitmap("back");
@@ -121,17 +126,17 @@
 //				});
 //				
 //				view.setTouchEventRect({top:"0px",left:"0px",width:"44px",height:"100%"});
-			});
-			
-			mui('.mui-scroll-wrapper').scroll();
-			mui('body').on('shown', '.mui-popover', function(e) {
-				//console.log('shown', e.detail.id);//detail为当前popover元素
-			});
-			mui('body').on('hidden', '.mui-popover', function(e) {
-				//console.log('hidden', e.detail.id);//detail为当前popover元素
-			});
-		
-		</script>
-	</body>
+    });
+
+    mui('.mui-scroll-wrapper').scroll();
+    mui('body').on('shown', '.mui-popover', function (e) {
+        //console.log('shown', e.detail.id);//detail为当前popover元素
+    });
+    mui('body').on('hidden', '.mui-popover', function (e) {
+        //console.log('hidden', e.detail.id);//detail为当前popover元素
+    });
+
+</script>
+</body>
 
 </html>
